<resources>
    <string name="language_prompt">Selecciona un idioma:</string>
    <string-array name="language_options">
        <item>Castellano</item>
        <item>Euskera</item>
        <item>Ingles</item>
    </string-array>
    <string name="app_name" translatable="false">RedactBook</string>
    <string name="escoger_idioma">Elige el idioma de uso:</string>
    <string name="redactbook" translatable="false">RedactBook</string>
    <string name="añadir_libro">Añadir Libro</string>
    <string name="menu">Menu</string>
    <string name="editar_libro">Editar libro</string>
    <string name="titulo">Titulo:</string>
    <string name="p_ginas">Páginas:</string>
    <string name="valoraci_n">Valoración:</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="guardar">Guardar</string>
    <string name="borrar_datos">Borrar Datos</string>
    <string name="cambiar_fondo">Cambiar Fondo</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="borrar_bbdd">Borrar BBDD</string>
    <string name="ingl_s">Inglés</string>
    <string name="euskera">Euskera</string>
    <string name="espa_ol">Español</string>
    <string name="elegir_idioma">Elegir idioma</string>
    <string name="cambiar_modo">Cambiar fondo</string>
    <string name="delete_database_title">Borrar Base de Datos</string>
    <string name="delete_database_message">¿Está seguro de que desea borrar toda la base de datos?</string>
    <string name="delete_database_yes">Si</string>
    <string name="delete_database_no">No</string>
    <string name="database_deleted">Base de datos borrada</string>
    <string name="valoraci_n_0">Valoración: 0</string>
    <string name="confirm_edit_title">Editar Libro</string>
    <string name="confirm_edit_message">¿Está seguro de que desea editar este libro?</string>
    <string name="confirm_save_changes">Guardar Cambios</string>
    <string name="confirm_save_message">¿Está seguro de que desea guardar los cambios?</string>
    <string name="confirm_edit_button">Editar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="save_button">Guardar</string>
    <string name="rating_warning">Rellene correctamente todos los campos</string>
    <string name="configuraci_n">Configuración</string>
    <string name="borrar_libro">Borrar libro</string>
    <string name="borrar_libro_message">¿Seguro que quieres borrar este libro?</string>
    <string name="completar">Por favor, rellene todos los campos</string>
    <string name="borrar_datos_bot">Borrar datos</string>
    <string name="profile_image_desc">foto de perfil</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta_de_usuario">Crear cuenta de usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="est_s_registrado_previamente">¿Estás registrado previamente?</string>
    <string name="cambiar_foto">Cambiar foto de perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cambiar_preguntar">¿Deseas cambiar tu foto de perfil?</string>
    <string name="seleccion_foto">Seleccionar fuente de imagen</string>
    <string name="galery">Galería</string>
    <string name="camara">Cámara</string>
    <string name="cancel">Cancelar</string>
    <string name="error_galery">Error al cargar la imagen desde la galería</string>
    <string name="galery_save">Imagen guardada en la galería</string>
    <string name="save_error">Error al guardar la imagen</string>
    <string name="sure_logout">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="server_error">Error al procesar la respuesta del servidor</string>
    <string name="con_error">Error de conexión</string>
    <string name="mi_mapa">Mi mapa</string>
    <string name="ubicacion">Ubicación seleccionada</string>
    <string name="img_err">Error al enviar la imagen al servidor</string>
    <string name="dwl_error">Error al cargar la imagen</string>
</resources>