<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadir_libro"
        style="?attr/itemTextColor"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="?attr/editTextStyle"
        android:hint="@string/titulo"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/editTextPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        style="?attr/editTextStyle"
        android:hint="@string/p_ginas"
        android:inputType="number"
        android:minHeight="48dp"/>

    <SeekBar
        android:id="@+id/seekBarRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        style="?attr/itemTextColor"
        android:layout_height="wrap_content"
        android:text="@string/valoraci_n_0"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?attr/buttonStyle"
        android:text="@string/guardar"/>


</LinearLayout>
