<?xml version="1.0" encoding="utf-8"?>
<!-- Define el diseño de la pantalla de configuración -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Layout que contiene los elementos centrados verticalmente -->
    <LinearLayout
        android:id="@+id/centered_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <!-- Título de la aplicación -->
        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configuraci_n"
            android:textSize="24sp"
            style="?attr/itemTextColor"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:visibility="visible" />

        <!-- Texto para seleccionar idioma -->
        <TextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_de_perfil"
            style="?attr/itemTextColor"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <!-- Image View para la foto de perfil -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/profile_image_desc"
            android:onClick="showChangePhotoDialog"
            android:scaleType="centerCrop"
            android:src="@drawable/default_profile_image"
            tools:ignore="ImageContrastCheck" />


        <!-- Texto para seleccionar idioma -->
        <TextView
            android:id="@+id/language_selection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elegir_idioma"
            style="?attr/itemTextColor"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <!-- Botones para seleccionar idioma -->
        <Button
            android:id="@+id/btn_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espa_ol"
            style="?attr/buttonStyle"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btn_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingl_s"
            style="?attr/buttonStyle"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/btn_euskera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euskera"
            style="?attr/buttonStyle"
            android:layout_marginBottom="16dp"/>

        <!-- Texto para borrar datos -->
        <TextView
            android:id="@+id/borrar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar_bbdd"
            style="?attr/itemTextColor"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <!-- Botón para borrar datos -->
        <Button
            android:id="@+id/btn_delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonStyle"
            android:text="@string/borrar_datos_bot"
            android:layout_marginBottom="16dp"/>

        <!-- Texto para cambiar modo -->
        <TextView
            android:id="@+id/text_switch_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_modo"
            style="?attr/itemTextColor"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />

        <!-- Interruptor para cambiar entre modos claro y oscuro -->
        <Switch
            android:id="@+id/switch_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:checked="false"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textOff="Modo claro"
            android:textOn="Modo oscuro"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <!-- Botón para cerrar sesión -->
        <Button
            android:id="@+id/btn_logout"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cerrar_sesi_n" />

    </LinearLayout>

    <!-- Botón para volver atrás -->
    <Button
        android:id="@+id/botonVolver"
        style="?attr/buttonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_home"
        android:drawableStart="@drawable/ic_home"
        android:text="Volver"
        tools:ignore="TextSizeCheck" />

    <!-- Botón para mapa -->
    <Button
        android:id="@+id/mapa"
        style="?attr/buttonStyle"
        android:layout_width="82dp"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="-27dp"
        android:background="@drawable/google_maps_icon_logo_wine"
        android:clickable="true"
        android:drawableStart="@drawable/google_maps_icon_logo_wine"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>
