<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redactbook"
                android:textSize="24sp"
                style="?attr/itemTextColor"
                android:textStyle="bold"
                android:layout_gravity="center"
                tools:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadir_libro"
        style="?attr/buttonStyle"
        android:onClick="onAñadirLibro"
        android:layout_below="@id/topLayout"
        android:layout_centerHorizontal="true"/>

    <ListView
        android:id="@+id/listViewBooks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnAddBook"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/menuButton"
        style="?attr/buttonStyle"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/settings"
        android:onClick="onAñadirConfig"
        android:text="@string/menu"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>
